# Khayon_Arknights

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Khayon_Assistant/: README.md  addon.cpp  binding.gyp  package-lock.json  package.json
Khayon_Assistant/src/: Adb.h  Khayon.h  OperatorInfo.cpp  OperatorInfo.h  Recruitment.cpp  Recruitment.h  khayon.cpp  util.cpp  util.h
Khayon_Assistant/src/include/win-CLIB-GPU-x64_1.6.1/lib/: OcrLiteNcnn.lib
Khayon_Assistant/src/resources/: tags_en_to_zh.json
Khayon_Gui/: index.html  main.ts  package.json  preload.js  test.js  tsconfig.json
Khayon_Gui/src/: style.css
src/Khayon_Assistant/: Adb.cpp  Adb.h  Operator.cpp  Operator.h  OperatorInfo.cpp  OperatorInfo.h  Recruitment.cpp  Recruitment.h  debug.hpp  util.h
src/Khayon_Gui/: khayon.cpp  khayon.h  khayon.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
